tests/invalid/parse/unclosed_block.pts
function f() : void {
    var x = 1;
